--- a/didactic-happiness-app/src/app/app.component.html
+++ b/didactic-happiness-app/src/app/app.component.html
@@ -26,6 +26,25 @@
     <button mat-icon-button (click)="sidenav.open()">
       <mat-icon>menu</mat-icon>
     </button>
+
+    <a mat-button [matMenuTriggerFor]="dropdown">
+      Screens
+    </a>
+
+    <mat-menu #dropdown>
+      <button mat-menu-item routerLink="/courses">Courses</button>
+      <button mat-menu-item routerLink="/about">About</button>
+    </mat-menu>
+
+    <a mat-button>
+      <mat-icon>person_add</mat-icon>
+      Register
+    </a>
+
+    <a mat-button>
+      <mat-icon>account_circle</mat-icon>
+      Login
+    </a>
   </mat-toolbar>
 
   <router-outlet></router-outlet>
